objects/Account.object
<CustomObject>
    <fields>
        <fullName>Has_Support_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales users use this field to indicate to Support which customers have support plans.</description>
        <inlineHelpText>Does this customer have a current support plan?  Check this box when you sell a support plan to this customer.</inlineHelpText>
        <label>Has Support Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Customer’s geographical region – for sales operations use only.</description>
        <inlineHelpText>In which region is the customer based?</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>Level of support on the account&apos;s service contract.</description>
        <inlineHelpText>Choose which level of support this account paid for on their contract.</inlineHelpText>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Plan_Expiration_Date__c</fullName>
        <description>Expiration date of current support plan.</description>
        <inlineHelpText>When is the current support plan due for renewal?</inlineHelpText>
        <label>Support Plan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Id__c</fullName>
        <description>18 digit id</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>18 digit id</inlineHelpText>
        <label>18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Customer’s zone within the selected region — for sales operations use only.</description>
        <inlineHelpText>In which zone is this customer based? Depends      on region.</inlineHelpText>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>UK + Ireland</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Midwest US</fullName>
                </value>
                <value>
                    <fullName>Northeast US</fullName>
                </value>
                <value>
                    <fullName>Southeast US</fullName>
                </value>
                <value>
                    <fullName>Southwest US</fullName>
                </value>
                <value>
                    <fullName>West US</fullName>
                </value>
                <value>
                    <fullName>Northern Canada</fullName>
                </value>
                <value>
                    <fullName>Mountains and the West</fullName>
                </value>
                <value>
                    <fullName>The Prairies</fullName>
                </value>
                <value>
                    <fullName>Central Canada</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Big_l_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.SALES</field>
            <operation>lessOrEqual</operation>
            <value>USD 5000000</value>
        </filters>
        <filters>
            <field>ACCOUNT.EMPLOYEES</field>
            <operation>lessOrEqual</operation>
            <value>500</value>
        </filters>
        <label>Small Accounts</label>
    </listViews>
    <listViews>
        <fullName>Cold_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RATING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RATING</field>
            <operation>equals</operation>
            <value>Cold</value>
        </filters>
        <label>Cold Accounts 👎</label>
    </listViews>
    <listViews>
        <fullName>Custom_Accounts_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>Accounts in California</label>
        <sharedTo>
            <roleAndSubordinates>Customer_Support_Director</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer_Account</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>Hot_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RATING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>Hot Accounts 🔥</label>
    </listViews>
    <listViews>
        <fullName>Manufacturing_and_Tech_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Manufacturing,Technology</value>
        </filters>
        <label>Manufacturing and Tech Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Not_Known_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RATING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RATING</field>
            <operation>equals</operation>
            <value>Not Known</value>
        </filters>
        <label>Not Known Accounts ❓</label>
    </listViews>
    <listViews>
        <fullName>Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Account</value>
        </filters>
        <label>Partners</label>
    </listViews>
    <listViews>
        <fullName>Sharing_Visibility_Example</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Sharing &amp; Visibility Example</label>
    </listViews>
    <listViews>
        <fullName>VPs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>VPs</label>
        <language>en_US</language>
        <sharedTo>
            <group>VPs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VPs2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>VPs2</label>
        <sharedTo>
            <group>VPs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Warm_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RATING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RATING</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>Warm Accounts 👀</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <description>For customers and prospects.</description>
        <label>Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account</fullName>
        <active>true</active>
        <description>For consulting partners.</description>
        <label>Partner Account</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Has_Support_Plan_Required</fullName>
        <active>true</active>
        <description>Only enter Support Plan Expiration Date if Has Support Plan is checked</description>
        <errorConditionFormula>Has_Support_Plan__c &lt;&gt;  True  &amp;&amp;  NOT(ISBLANK( Support_Plan_Expiration_Date__c ))</errorConditionFormula>
        <errorDisplayField>Support_Plan_Expiration_Date__c</errorDisplayField>
        <errorMessage>Only enter Support Plan Expiration Date if Has Support Plan is checked🖐</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Box</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISBLANK( PO_Box__c )),
    NOT(REGEX( PO_Box__c , &quot;[PO Box ]{7}[0-9]{5}&quot;))
   )</errorConditionFormula>
        <errorDisplayField>PO_Box__c</errorDisplayField>
        <errorMessage>Check PO Box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_plan_expiration_date_required</fullName>
        <active>true</active>
        <description>Support plan expiration date is required when account is marked as having support plan.</description>
        <errorConditionFormula>Has_Support_Plan__c  = True  &amp;&amp;  ISBLANK( Support_Plan_Expiration_Date__c )</errorConditionFormula>
        <errorDisplayField>Support_Plan_Expiration_Date__c</errorDisplayField>
        <errorMessage>You must enter an expiration date when an account has a support plan.‼</errorMessage>
    </validationRules>
</CustomObject>